themes/yilia/source/main.0cf68a.css
/* ... */
.pswp--animated-in .pswp__bg,
.pswp--animated-in .pswp__zoom-wrap {
  transition: none
}

.pswp__container,
.pswp__zoom-wrap {
  -webkit-backface-visibility: hidden
}

.pswp__item {
  right: 0;
  bottom: 0;
  overflow: hidden
}

.pswp__img,
.pswp__item {
  position: absolute;
  left: 0;
  top: 0
}

.pswp__img {
  width: auto;
  height: auto
}

.pswp__img--placeholder {
  -webkit-backface-visibility: hidden
}

.pswp__img--placeholder--blank {
  background: #222
}

.pswp--ie .pswp__img {
  width: 100% !important;
  height: auto !important;
  left: 0;
  top: 0
}

.pswp__error-msg {
  position: absolute;
  left: 0;
  top: 50%;
  width: 100%;
  text-align: center;
  font-size: 14px;
  line-height: 16px;
  margin-top: -8px;
  color: #ccc
}

.pswp__error-msg a {
  color: #ccc;
  text-decoration: underline
}

/*************************************/
/**            自定义样式            **/
/*************************************/


/*《分类页面，标签页面样式*/
/*标题*/
.category-count {
  text-align: left;
  line-height: 3;
  font-size: 1.9rem;
  margin-left: 5%;
  display: block;
}

@keyframes masked-animation {
  0% {
    background-position: 0 0;
    /*background-position 属性设置背景图像的起始位置。*/
  }

  100% {
    background-position: -100% 0;
  }
}

/* 手机端CSS代码 */
@media screen and (max-width: 960px) {
  .category-count {
    text-align: center;
    line-height: 3;
    font-size: 27px;
  }
}

/* https://github.com/IanLunn/Hover,
https://ianlunn.github.io/Hover/ */
/* Rectangle In */
.hvr-rectangle-in {
  display: inline-block;
  vertical-align: middle;
  padding: 0.5em;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  background: #2098D1;
  border-radius: 10px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
}

.hvr-rectangle-in:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #e1e1e1;
  border-radius: 10px;
  -webkit-transform: scale(1);
  transform: scale(1);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.hvr-rectangle-in:hover,
.hvr-rectangle-in:focus,
.hvr-rectangle-in:active {
  color: white;
}

.hvr-rectangle-in:hover:before,
.hvr-rectangle-in:focus:before,
.hvr-rectangle-in:active:before {
  -webkit-transform: scale(0);
  transform: scale(0);
}

/* 分类 */
.category-list {
  text-align: center;
  padding: 20px
}

.category-list li.category-list-item {
  display: inline-block;
  margin: 0 1em .5em 0;
  padding: 4px;
  /* border:1px solid #aaaaaa; */
  font-size: 1.4rem
}

/*.category-list li.category-list-item a {
  text-decoration: none;
}

.category-list li.category-list-item:hover {
  background: #aaaaaa;
}*/

.category-list li.category-list-item a {
  /*margin: 0 20px;*/
  word-break: keep-all;
  position: relative
}

.category-list li.category-list-item a:hover::before {
  width: 100%;
  left: 0;
  right: auto
}

.category-list li.category-list-item a::before {
  content: "";
  position: absolute;
  width: 0;
  right: 0;
  bottom: -10%;
  height: 2px;
  /* background: #08c; */
  /* -webkit-transition: width .3s ease; */
  /* transition: width .3s ease */
}

/* 分类和标签的分界面 */
.category-hr-tag {}

/* 标签 */
.tag-cloud {
  text-align: center;
  padding: 20px
}

.tag-cloud a {
  margin: 0 20px;
  word-break: keep-all;
  position: relative
}

.tag-cloud a:hover::before {
  width: 100%;
  left: 0;
  right: auto
}

.tag-cloud a::before {
  content: "";
  position: absolute;
  width: 0;
  right: 0;
  bottom: -10%;
  height: 2px;
  background: #08c;
  -webkit-transition: width .3s ease;
  transition: width .3s ease
}


.tagred , .categoryred {
  background: #feecf0!important;
  color:#cc0f35!important;
}
.tagorange , .categoryorange {
  background: #fff1ec!important;
  color:#e74d05!important;
}
.tagblue , .categoryblue {
  background: #eef3fc!important;
  color:#2160c4!important;
}
.taggreen , .categorygreen {
  background: #ebfffc!important;
  color:#00947e!important;
}
.tagpurple , .categorypurple {
  background: #f4e9ff!important;
  color:#8a51c0!important;
}
.tagyellow , .categoryyellow {
  background: #fffbeb!important;
  color:#947600!important;
}

.all-tags ul ,
.all-categories ul {
    margin: 10px 10% 25px 10%;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
}

.all-tags ul ,
.all-categories ul {
    justify-content:space-between
}

.all-tags ul :last-child ,
.all-categories ul :last-child {
    margin-right: auto;
}

.all-tags ul li ,
.all-categories ul li {
    list-style: none;
    margin: 8px;
    border-radius: 4px;
    overflow: hidden;
    display: flex;
    position: relative;
    font-size: 1.3rem;
}

.all-categories ul li {
  border-radius: 1.2rem;
}

.all-tags ul li a ,
.all-categories ul li a {
    display: inline-block;
    padding: 4px 52px 4px 16px;
    font-weight: 500;
}

.all-tags ul li a:hover ,
.all-categories ul li a:hover {
    background: #ff5722!important;
    color: #fff!important;
    -webkit-transition: .3s ease-out;
    transition: .3s ease-out;
}

.all-tags ul li span {
    color: var(--color-meta);
    background: #fff;
    padding: 2px 8px;
    border-radius: 2px;
    pointer-events: none;
    position: absolute;
    right: 2px;
    top: 2px;
    height: calc(100% - 4px);
}

.all-categories ul li span {
    color: var(--color-meta);
    background: #fff;
    padding: 0px 8px;
    border-radius: 4px;
    pointer-events: none;
    position: absolute;
    right: 6.5px;
    top: 8px;
    height: calc(100% - 15px);
}

.all-tags ul li span:before ,
.all-categories ul li span:before {
    content: '';
}
/* ... */

